# SuperContinuum

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  npp.c
cmake/Modules/: FindCgreen.cmake  FindPETSc.cmake
include/: CMakeLists.txt  basic_types.h  fd.h  fft.h  jacobian.h  problem.h
npp/: CMakeLists.txt  Makefile
sc/: CMakeLists.txt  sc.c
src/: CMakeLists.txt  fd.c  fft.c  fft.cpp  jacobian.c
tests/: CMakeLists.txt  jacobian_test_utils.c  jacobian_test_utils.h  test_FD.c  test_FFT.c  test_FFT.cpp  test_jacobian.c  test_jacobian_fourth_order.c  test_jacobian_second_order.c  test_utils.c  test_utils.h
utilities/: aws_setup.sh  get_cgreen.sh  get_petsc.sh  travis_get_mpi.sh
